--- a/prueba.html
+++ b/prueba.html
@@ -61,10 +61,14 @@
   
 
   
-
+ 
   <!-- Sección de funcionalidades mejorada -->
   <section class="py-16 bg-white">
     <div class="container mx-auto text-center">
+          <!-- Titulo en azul-->
+        <p class="text-base font-bold uppercase text-[#2563EB]">
+            Tenemos todo lo que necesitas para digitalizar tu negocio
+        </p>
       <h2 class="text-3xl font-extrabold text-gray-900">Lleva el control total de tu centro médico en una app</h2>
       <p class="mt-4 text-lg text-gray-600">Simplifica la gestión de tu consulta médica desde la programación de citas hasta el seguimiento de fichas clínicas.</p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mt-12">
@@ -611,16 +615,16 @@
         <div class="text-center md:text-left">
           <h3 class="text-lg font-semibold mb-4">Síguenos en redes</h3>
           <div class="flex justify-center md:justify-start space-x-6">
-            <a linkref="https://facebook.com">
+            <a href="https://facebook.com">
               <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" class="w-8 h-8">
             </a>
-            <a linkref="https://twitter.com">
+            <a href="https://twitter.com">
               <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg" alt="Twitter" class="w-8 h-8">
             </a>
-            <a linkref="https://linkedin.com">
+            <a href="https://linkedin.com">
               <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Linkedin_icon.svg" alt="LinkedIn" class="w-8 h-8">
             </a>
-            <a linkref="https://instagram.com">
+            <a href="https://instagram.com">
               <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="w-8 h-8">
             </a>
           </div>
@@ -629,7 +633,7 @@
         <!-- Información de contacto -->
         <div class="text-center">
           <h3 class="text-lg font-semibold mb-4">Contacto</h3>
-          <p>Correo: <a linkref="mailto:contacto@mediconnect.com" class="text-blue-400 hover:text-blue-500">contacto@mediconnect.com</a></p>
+          <p>Correo: <a href="mailto:contacto@mediconnect.com" class="text-blue-400 hover:text-blue-500">contacto@mediconnect.com</a></p>
           <p>Teléfono: +52 800 123 4567</p>
           <p>Dirección: Av. Salud 123, CDMX, México</p>
         </div>
@@ -638,10 +642,10 @@
         <div class="text-center md:text-right">
           <h3 class="text-lg font-semibold mb-4">Descarga la app</h3>
           <div class="flex justify-center md:justify-end space-x-4">
-            <a linkref="https://play.google.com">
+            <a href="https://play.google.com">
               <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play" class="w-32 h-auto">
             </a>
-            <a linkref="https://apple.com">
+            <a href="https://apple.com">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store" class="h-12">
             </a>
           </div>
@@ -654,7 +658,7 @@
       <!-- Texto interactivo con efecto -->
       <div class="relative text-center my-12">
         <p class="text-gray-400 text-sm">¿Listo para una mejor gestión médica?</p>
-        <a linkref="login.html" class="block text-4xl font-bold hover:text-blue-500 transition-transform transform hover:scale-110">
+        <a href="login.html" class="block text-4xl font-bold hover:text-blue-500 transition-transform transform hover:scale-110">
           ¡Comienza aquí!
         </a>
       </div>
@@ -667,25 +671,25 @@
         <div>
           <h3 class="text-lg font-semibold">MediConnect</h3>
           <ul class="mt-2 space-y-2">
-            <li><a linkref="acerca.html" class="text-gray-400 hover:text-blue-400">Acerca de</a></li>
-            <li><a linkref="testimonios.html" class="text-gray-400 hover:text-blue-400">Testimonios</a></li>
-            <li><a linkref="blog.html" class="text-gray-400 hover:text-blue-400">Blog</a></li>
+            <li><a href="acerca.html" class="text-gray-400 hover:text-blue-400">Acerca de</a></li>
+            <li><a href="testimonios.html" class="text-gray-400 hover:text-blue-400">Testimonios</a></li>
+            <li><a href="blog.html" class="text-gray-400 hover:text-blue-400">Blog</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold">Soporte</h3>
           <ul class="mt-2 space-y-2">
-            <li><a linkref="ayuda.html" class="text-gray-400 hover:text-blue-400">Ayuda</a></li>
-            <li><a linkref="privacidad.html" class="text-gray-400 hover:text-blue-400">Política de privacidad</a></li>
-            <li><a linkref="terminos.html" class="text-gray-400 hover:text-blue-400">Términos y condiciones</a></li>
+            <li><a href="ayuda.html" class="text-gray-400 hover:text-blue-400">Ayuda</a></li>
+            <li><a href="privacidad.html" class="text-gray-400 hover:text-blue-400">Política de privacidad</a></li>
+            <li><a href="terminos.html" class="text-gray-400 hover:text-blue-400">Términos y condiciones</a></li>
           </ul>
         </div>
         <div>
           <h3 class="text-lg font-semibold">Funcionalidades</h3>
           <ul class="mt-2 space-y-2">
-            <li><a linkref="agendamiento.html" class="text-gray-400 hover:text-blue-400">Agendamiento</a></li>
-            <li><a linkref="historia-clinica.html" class="text-gray-400 hover:text-blue-400">Historia Clínica</a></li>
-            <li><a linkref="recordatorios.html" class="text-gray-400 hover:text-blue-400">Recordatorios</a></li>
+            <li><a href="agendamiento.html" class="text-gray-400 hover:text-blue-400">Agendamiento</a></li>
+            <li><a href="historia-clinica.html" class="text-gray-400 hover:text-blue-400">Historia Clínica</a></li>
+            <li><a href="recordatorios.html" class="text-gray-400 hover:text-blue-400">Recordatorios</a></li>
           </ul>
         </div>
         <div>
@@ -697,8 +701,51 @@
         </div>
       </div>
     </div>
-  </footer>
-  
+
+    <!-- Sección dinámica con nombre y logo -->
+    <div class="mt-8 flex flex-col justify-center items-center px-4 md:px-8">
+      <div class="text-white text-sm flex items-center animate-fade-in">
+        <span>MediConnect hecho con el ❤️ por </span>
+        <span id="nombre" class="ml-1"></span>
+      </div>
+      <div>
+        <img src="https://drive.google.com/uc?export=view&id=1GIrdw8OSy38ANRERURI_2dxNeAqnF0Jw" alt="Logo" class="w-10 h-10 object-contain mt-4">
+    </div>
+    </div>
+</footer>
+
+<style>
+    /* Animación de fade in/out */
+    @keyframes fadeInOut {
+      0% { opacity: 0; }
+      50% { opacity: 1; }
+      100% { opacity: 0; }
+    }
+
+    .animate-fade-in {
+      animation: fadeInOut 5s infinite;
+    }
+</style>
+
+
+<script>
+    // Lista de nombres que cambiarán dinámicamente
+    const nombres = ["Luis Fernando Rodriguez Cruz", "Nayeli Ortiz Garcia", "Jose Eduardo Marquez Santillan", "Maria de los Angeles Diaz Berumen", "Donovan Rojo Chaidez","Leidy Valle","Abraham Ezequiel Garcia Campos"];
+    let index = 0;
+
+    // Función para cambiar los nombres
+    function cambiarNombre() {
+        document.getElementById("nombre").textContent = nombres[index];
+        index = (index + 1) % nombres.length; // Cambia al siguiente nombre
+    }
+
+    // Cambiar el nombre cada 3 segundos
+    setInterval(cambiarNombre, 5000);
+
+    // Iniciar con el primer nombre
+    cambiarNombre();
+</script>
+
   
   
   <!-- Estilos adicionales -->
@@ -719,3 +766,4 @@
   
   
 </html>
+
