--- a/prueba.html
+++ b/prueba.html
@@ -709,7 +709,7 @@
         <span id="nombre" class="ml-1"></span>
       </div>
       <div>
-        <img src="https://drive.google.com/uc?export=view&id=1GIrdw8OSy38ANRERURI_2dxNeAqnF0Jw" alt="Logo" class="w-10 h-10 object-contain mt-4">
+        <img src="Recursos/MediconnectLogo.png" alt="Logo" class="w-10 h-10 object-contain mt-4">
     </div>
     </div>
 </footer>
