--- a/login.html
+++ b/login.html
@@ -137,8 +137,14 @@
             </div>
         </div>
         <div class="login-footer">
-            <p class="text-sm">¿No tiene una cuenta? <a href="#">Regístrate</a></p>
-            <p class="text-sm">¿Necesita ayuda técnica? <a href="#">Soporte</a></p>
+            <p class="text-sm text-gray-600 mt-4">
+                ¿No tiene una cuenta? 
+                <a href="registro.html" class="text-blue-600 hover:text-blue-800 font-semibold">Regístrate</a>
+              </p>
+              <p class="text-sm text-gray-600 mt-2">
+                ¿Necesita ayuda técnica? 
+                <a href="ayuda.html" class="text-blue-600 hover:text-blue-800 font-semibold">Soporte</a>
+              </p>
         </div>
     </div>
     <script>
