--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
       <a href="index.html" class="text-xl font-bold text-blue-600">MediConnect</a>
       <nav class="space-x-6">
-        <a href="#" class="text-gray-700 hover:text-blue-600">Soluciones</a>
-        <a href="#" class="text-gray-700 hover:text-blue-600">Funcionalidades</a>
-        <a href="#" class="text-gray-700 hover:text-blue-600">Precios</a>
-        <button class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">Prueba Gratis</button>
+        <a href="soluciones.html" class="text-gray-700 hover:text-blue-600">Soluciones</a>
+        <a href="funcionalidades.html" class="text-gray-700 hover:text-blue-600">Funcionalidades</a>
+        <a href="precios.html" class="text-gray-700 hover:text-blue-600">Precios</a>
+        <button onclick="window.location.href='registro.html'" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">Prueba Gratis</button>
       </nav>
       <div>
         <a href="login.html" class="text-gray-700 hover:text-blue-600">Ir a mi cuenta</a>
       </div>
     </div>
   </header>
+
+
 
   <!-- Agregar un margen superior para evitar que el contenido se solape con el encabezado -->
   <div class="pt-24"></div>
@@ -39,9 +41,10 @@
         <p class="mt-4 text-lg text-gray-700 leading-relaxed">
           Únete a la digitalización y automatización de su centro de salud. ¡Empieza hoy mismo!
         </p>
-        <button class="mt-8 bg-blue-600 text-white py-3 px-8 rounded-full text-lg hover:bg-blue-700 hover:shadow-lg transition duration-300 ease-in-out">
+        <button onclick="window.location.href='registro.html'" class="mt-8 bg-blue-600 text-white py-3 px-8 rounded-full text-lg hover:bg-blue-700 hover:shadow-lg transition duration-300 ease-in-out">
           Prueba Gratis
         </button>
+        
       </div>
       <!-- Imagen -->
       <div class="w-full md:w-1/2 flex justify-center">
@@ -683,18 +686,19 @@
           <h3 class="text-lg font-semibold">Soporte</h3>
           <ul class="mt-2 space-y-2">
             <li><a href="ayuda.html" class="text-gray-400 hover:text-blue-400">Ayuda</a></li>
-            <li><a href="privacidad.html" class="text-gray-400 hover:text-blue-400">Política de privacidad</a></li>
-            <li><a href="terminos.html" class="text-gray-400 hover:text-blue-400">Términos y condiciones</a></li>
+            <li><a href="politica-privacidad.html" class="text-gray-400 hover:text-blue-400">Política de privacidad</a></li>
+            <li><a href="terminos-condiciones.html" class="text-gray-400 hover:text-blue-400">Términos y condiciones</a></li>
           </ul>
         </div>
         <div>
-          <h3 class="text-lg font-semibold">Funcionalidades</h3>
+          <h3 class="text-lg font-semibold">Recursos</h3>
           <ul class="mt-2 space-y-2">
-            <li><a href="agendamiento.html" class="text-gray-400 hover:text-blue-400">Agendamiento</a></li>
-            <li><a href="historia-clinica.html" class="text-gray-400 hover:text-blue-400">Historia Clínica</a></li>
-            <li><a href="recordatorios.html" class="text-gray-400 hover:text-blue-400">Recordatorios</a></li>
+            <li><a href="casos-exito.html" class="text-gray-400 hover:text-blue-400">Casos de Éxito</a></li>
+            <li><a href="innovacion.html" class="text-gray-400 hover:text-blue-400">Innovación en Salud</a></li>
+            <li><a href="planes-futuro.html" class="text-gray-400 hover:text-blue-400">Planes a Futuro</a></li>
           </ul>
         </div>
+        
         <div>
           <h3 class="text-lg font-semibold">Subscripción</h3>
           <form class="mt-2">
